Bug 116733 - UI: The settings in the expert configuration won't expanded
Summary: UI: The settings in the expert configuration won't expanded
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-04-01 19:47 UTC by Telesto
Modified: 2018-04-04 08:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-04-01 19:47:58 UTC
Description:
The settings in the expert configuration won't expanded 

Steps to Reproduce:
1. Open LibreOffice
2. Tools -> Options -> LibreOfficeDev -> Advanced -> Open expert configuration
3. Attempt to expand/browse org.openoffice.vcl (or something else

Actual Results:  
Expanding isn't working

Expected Results:
Did work before


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.0.0.alpha0+
Build ID: 85b9b178467c3dd7a96a6b07713ca94bc3790c50
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-03-31_23:14:33
Locale: nl-NL (nl_NL); Calc: group


User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 V Stuart Foote 2018-04-01 22:28:14 UTC
Confirmed. The hide/expose triangles (icons changed?) of the Expert configuration tree list does not close or expand the list elements.

Version: 6.1.0.0.alpha0+ (x64)
Build ID: 655b9054bc265de377c3dc411e2ef40cdfd16dce
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-27_03:21:52
Locale: en-US (en_US); Calc: CL

The +/- icons of 6.0 release build expose/hide stanzas...
Version: 6.0.3.1 (x64)
Build ID: 62abb169b0efa1520d7bee1f586865354060b989
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: en-US (en_US); Calc: CL
Comment 2 raal 2018-04-03 07:39:56 UTC
This seems to have begun at the below commit.
Adding Cc: to Jan Holesovsky; Could you possibly take a look at this one? Thanks

 6b6fb2b9faa52a57c70f5a31d7e44782df64f922 is the first bad commit
commit 6b6fb2b9faa52a57c70f5a31d7e44782df64f922
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Mar 1 07:06:29 2018 -0800

    source 7651e57573952758032ceb88f16e2dbbb6cc4e18
author	Jan Holesovsky <kendy@collabora.com>	2018-03-01 12:13:53 +0100
committer	Jan Holesovsky <kendy@collabora.com>	2018-03-01 15:41:13 +0100
commit 7651e57573952758032ceb88f16e2dbbb6cc4e18 (patch)
tree f27c232b2213d534999dbaa96af41f350e20351c
parent a4ed3d9a1ffa1b51ba4352a955c950235f099fdc (diff)
tdf#115950: Indicate that the dialog was already destroyed.
Comment 3 Commit Notification 2018-04-03 10:01:47 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3af6be55ae1dabb1b72cbb4c57cca33c28b347f8

tdf#116733: Fix expanding in the entries in "Open expert configuration".

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Jan Holesovsky 2018-04-03 10:02:38 UTC
Thank you for the bisect, helped tremendously as always! :-)
Comment 5 Xisco Faulí 2018-04-04 08:49:12 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 2d5ce0e1b233c83f91481cd6b9306ac8de7f5ff8
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Thank you Kendy!