tdf#116733: Fix expanding in the entries in "Open expert configuration".

The DoubleClickHdl()'s return value does not mean "was handled", but actually
"is there anything more to be done".

Change-Id: Ideeee31db648829546a713148124e3d366941b9a
Reviewed-on: https://gerrit.libreoffice.org/52292
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
(cherry picked from commit 3af6be55ae1dabb1b72cbb4c57cca33c28b347f8)
Reviewed-on: https://gerrit.libreoffice.org/52305
Reviewed-by: Marco Cecchetti <mrcekets@gmail.com>
Tested-by: Marco Cecchetti <mrcekets@gmail.com>